# logit_mle

./: .gitignore  README.md  pyproject.toml
src/logit_mle/: __init__.py  base.py  logit.py  nested_logit.py  quadrature.py  random_coefficients.py
tests/: test_diversion.py  test_elasticity.py  test_market_fe.py  test_nested_logit_gamma.py  test_quadrature.py
