[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logit_mle"
version = "0.1.0"
description = "Discrete choice models: Logit, Nested Logit, Random Coefficients (JAX)"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "jax",
    "jaxlib",
]

[project.optional-dependencies]
sparse = ["chaospy"]

[tool.setuptools.packages.find]
where = ["src"]
